# flower

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  config.h.in  flower.conf  main.cpp
.github/workflows/: cmake.yml
cmake/: Dependencies.cmake  flowerConfig.cmake
include/: arguments.hpp  async.hpp  benchmark.hpp  buffer.hpp  cache.hpp  common.hpp  definition.hpp  entry.hpp  exporter.hpp  flow.hpp  input.h  input.hpp  ipfix.hpp  log.hpp  manager.hpp  network.hpp  options.hpp  parser.hpp  plugin.hpp  processor.hpp  protocol.hpp  provider.hpp  queue.hpp  record.hpp  reducer.hpp  serializer.hpp  shared_object.hpp
include/flows/: ethernet.hpp  flow.hpp  gre.hpp  ip.hpp  ipv6.hpp  mpls.hpp  tcp.hpp  udp.hpp  vlan.hpp  vxlan.hpp
include/protocols/: gre.hpp  vxlan.hpp
lib/: CMakeLists.txt
lib/plugins/: CMakeLists.txt  input.h  input.hpp  manager.hpp  plugin.h  plugin.hpp  provider.h  provider.hpp  shared_object.hpp
plugins/: CMakeLists.txt  file_provider.c  interface_provider.c
src/: cache.cpp  exporter.cpp  log.cpp  main.cpp  manager.cpp  options.cpp  parser.cpp  processor.cpp  reducer.cpp  serializer.cpp
src/shared/: file_provider.cpp  interface_provider.cpp
test/: CMakeLists.txt  unit_tests.cpp
